stylesheets/style.css
/* ---------------------------------------------------------------------------------------- */
/* normalize.css */

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section,
summary {
  display: block;
}

audio,
canvas,
video {
  display: inline-block;
}

audio:not([controls]) {
  display: none;
  height: 0;
}

[hidden],
template {
  display: none;
}

html {
  font-family: sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
}

a {
  background: transparent;
}

a:focus {
  outline: thin dotted;
}

a:active,
a:hover {
  outline: 0;
}



h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

abbr[title] {
  border-bottom: 1px dotted;
}

b,
strong {
  font-weight: 600;
}

dfn {
  font-style: italic;
}

hr {
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  height: 0;
}

mark {
  background: hsl(60, 100%, 50%);
  color: hsl(0, 0%, 0%);
}

code,
kbd,
pre,
samp {
  font-family: monospace, serif;
  font-size: 1em;
}

pre {
  white-space: pre-wrap;
}

q {
  quotes: "\201C" "\201D" "\2018" "\2019";
}

small {
  font-size: 80%;
}

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sup {
  top: -0.5em;
}

sub {
  bottom: -0.25em;
}

img {
  border: 0;
}

svg:not(:root) {
  overflow: hidden;
}

figure {
  margin: 0;
}

fieldset {
  border: 1px solid hsl(0, 0%, 75%);
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em;
}

legend {
  border: 0;
  padding: 0;
}

button,
input,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
  margin: 0;
}

button,
input {
  line-height: normal;
}

button,
select {
  text-transform: none;
}

button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
  -webkit-appearance: button;
  cursor: pointer;
}

button[disabled],
html input[disabled] {
  cursor: default;
}

input[type="checkbox"],
input[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

input[type="search"] {
  -webkit-appearance: textfield;
  -moz-box-sizing: content-box;
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
}

input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
  border: 0;
  padding: 0;
}

textarea {
  overflow: auto;
  vertical-align: top;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* ---------------------------------------------------------------------------------------- */
/* Codr.tv coming soon page styles */

::selection {
  background: hsl(5, 80%, 65%);
  color: white;
}

::-moz-selection {
  background: hsl(5, 80%, 65%);
  color: white;
}

*,
*:before,
*:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

::-webkit-input-placeholder {
   color: #bbb;
   font-style: italic;
   letter-spacing: 1px;
}

::-moz-placeholder {
   color: #bbb;
   font-style: italic;
   letter-spacing: 1px;
}

:-ms-input-placeholder {
   color: #bbb;
   font-style: italic;
   letter-spacing: 1px;
}

body {
  background: white;
  font: 300 18px/1.65 "Open Sans";
  color: hsl(210, 3%, 50%);
}

h1,
h2 {
  font-weight: 300;
  font-size: 165%;
  margin: 0;
  padding: 0;
}

h2 {
  font-size: 150%;
}

small {
  display: block;
  text-align: center;
  margin-top: 2em;
  font-size: 70%;
  color: hsl(210, 3%, 66%);
}

h1,
h2,
.p--large-text {
  color: hsl(205, 2%, 30%);
}

.p--large-text {
  font-weight: 300;
  font-size: 155%;
  margin: 0;
}

.p--centered {
  text-align: center;
  margin: 0.25em 0 0;
}

.header--main {
  background: hsl(200, 70%, 35%) url('../images/bg-pattern.png') 0 0 repeat;
  -webkit-box-shadow: inset 0 -5px 8px hsla(210, 40%, 20%, 0.3);
  -moz-box-shadow: inset 0 -5px 8px hsla(210, 40%, 20%, 0.3);
  box-shadow: inset 0 -5px 8px hsla(210, 40%, 20%, 0.3);
  color: white;
  overflow: visible;
  max-height: 800px;
  text-align: center;
  padding: 3em 0 0;
}

.header--main h1 {
  color: white;
  font-weight: 300;
  text-shadow: 1px 2px 3px hsla(0, 0%, 0%, 0.25);
  margin: 0.75em 0 1.25em;
  padding: 0;
}

.video--container {
  border-radius: 1px;
  -webkit-box-shadow: 0 0 0 8px hsla(0, 0%, 0%, .1);
  -moz-box-shadow: 0 0 0 8px hsla(0, 0%, 0%, .1);
  box-shadow: 0 0 0 8px hsla(0, 0%, 0%, .1);
  width: 100%;
  max-width: 1120px;
  margin: 0 auto;
  padding: 0;
}

.video--clip {
  height: 0;
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */;
}

.video--clip iframe {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

.wrapper {
  max-width: 1100px;
  margin: 0 auto;
}

.section--main {
  padding-top: 8em;
}

.section--signup {
  border-top: 1px solid hsl(0, 0%, 90%);
  margin: 2.5em 0 0;
  padding: 2em 0 0;
}

.list--features {
  display: block;
  margin: 2em 0 0;
  list-style: none;
  padding: 0;
  text-align: center;
}

.list--features h2 {
  margin: 0.75em 0 0;
}

.list--features li {
  display: inline-block;
  margin-left: 1%;
  vertical-align: top;
  width: 32%;
}

.list--features p {
  margin: 0.1em 0 0;
}

.list--features li:first-child {
  margin-left: 0;
}

br.r--730 {
  /* This linebreak will only appear when site width is 500-730px */
  display: none;
}

.img--baseline {
  position: relative;
  vertical-align: baseline;
  top: 1px;
}

.img--feature {
  display: block;
  margin: 0 auto;
}

.wrapper--input {
  margin: 1.5em auto 0;
  max-width: 28em;
  position: relative;
}

.wrapper--input:hover .btn--submit {
  background: hsl(7, 85%, 60%);
}

.wrapper--input:hover .input--email {
  border-color: hsl(7, 85%, 60%);
}

.btn--submit,
.input--email {
  font-size: 105%;
  height: 3.5em;
  line-height: 3.5em;
  -webkit-transition: all 0.1s ease-in-out;
  -moz-transition: all 0.1s ease-in-out;
  -ms-transition: all 0.1s ease-in-out;
  -o-transition: all 0.1s ease-in-out;
  transition: all 0.1s ease-in-out;
}

.btn--submit {
  -webkit-border-radius: 0 3px 3px 0;
  -moz-border-radius: 0 3px 3px 0;
  border-radius: 0 3px 3px 0;
  background: hsl(5, 80%, 65%);
  border: 0;
  color: white;
  font-weight: normal;
  letter-spacing: 2px;
  padding: 0 1em;
  position: absolute;
  text-transform: uppercase;
  top: 0;
  right: 0;
}

.btn--submit:active {
  outline: none;
  -webkit-transform: translateX(-2px);
}

.input--email {
  border: 2px solid hsl(5, 80%, 65%);
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  display: block;
  font-weight: 300;
  padding: 0 1em;
  width: 100%;
}

.input--email:focus {
  outline: 0;
  border-width: 4px;
}

.footer--main {
  border-top: 1px solid hsl(0, 0%, 91%);
  color: hsl(0, 0%, 60%);
  font-weight: 300;
  font-size: 70%;
  text-transform: uppercase;
  margin: 4em 0 3em;
  padding: 2em 0 0;
  text-align: center;
  letter-spacing: 2px;
}

/* Responsive styles */

@media screen and (max-width: 1100px) {
 .section--main {
    padding-top: 6em;
  }

  .p--large-text {
    margin: 0 auto;
    width: 80%;
  }
}

@media screen and (max-width: 1000px) {
  .wrapper {
    padding: 0 1em;
  }

  .section--main {
    padding-top: 4em;
  }
}

@media screen and (max-width: 920px) {
  body {
    font-size: 17px;
  }

  .section--main {
    padding-top: 3em;
  }
}

@media screen and (max-width: 850px) {
  h1,
  h2,
  .p--large-text {
    font-size: 140%;
  }

  .list--features li br { display: none; }
}

@media screen and (max-width: 730px) {
  .list--features br.r--730 { display: block; }
}

@media screen and (max-width: 670px) {
  h1,
  h2,
  .p--large-text {
    font-size: 125%;
  }

  .list--features li {
    width: 30%;
  }
  small { font-size: 80%; }
}

@media screen and (max-width: 500px) {
  body { font-size: 16px; }

  .list--features li {
    display: block;
    margin: 2em auto;
    width: 60%;
  }

  .list--features li:first-child { margin-left: auto; }

  .list--features br.r--730 { display: none; }
}

